whoami/Service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: whoami
  name: whoami-service
spec:
  type: LoadBalancer
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoami
