whoami/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: whoami
  name: whoami-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: whoami.detainedu.lan
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami-service
          servicePort: http
