whoami/whoami-manifest.yaml
apiVersion: v1
kind: Namespace 
metadata: 
  name: whoami
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: whoami
  name: whoami-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami-container
        image: containous/whoami

---
apiVersion: v1
kind: Service
metadata:
  namespace: whoami
  name: whoami-service
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoami

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: whoami
  name: whoami-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: whoami.detainedu.lan
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami-service
          servicePort: http
